[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nse-advisor"
version = "1.0.0"
description = "NSE Options Signal Advisor - A signal-only options trading advisor for NSE indices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NSE Advisor Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Async HTTP
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    
    # NSE scraping
    "requests>=2.31.0",
    
    # Options math
    "py_vollib>=1.0.1",
    "scipy>=1.11.0",
    "numpy>=1.26.0",
    
    # Technical analysis
    "pandas>=2.1.0",
    "pandas-ta-remake",
    
    # Historical data
    "yfinance>=0.2.33",
    
    # Machine learning
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    
    # Cache
    "redis>=5.0.0",
    
    # Scheduler
    "apscheduler>=3.10.0",
    
    # Telegram
    "python-telegram-bot>=20.6",
    
    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Logging
    "structlog>=23.2.0",
    
    # Dashboard
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    
    # Utilities
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
]

[project.scripts]
nse-advisor = "nse_advisor.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/nse-advisor"
Documentation = "https://github.com/yourusername/nse-advisor#readme"
Repository = "https://github.com/yourusername/nse-advisor.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["nse_advisor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["nse_advisor/tests", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["nse_advisor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
